compile errors is fixed but the tests are failing and intellij cannot be run in test debug mode due to problems with annotation processing classes